# simple-upload-server

./: .env.example  Cargo.toml  readme.md
src/: main.rs
